@@ -14,3 +14,12 @@ Changes for SK, if you use the provided projectx-pcode.jar file:
 	- Upgrades from 10 tick to 14 tick.
 	- Fixes an input drop bug experienced with high fps.
 	- Disables movement interpolation of entities on screen, to reduce buffering.
+
+# For GH trying to fix Java 19 compatibility:
+
+1. Remove "jvmarg = -XX:+AggressiveOpts" from getdown.txt. It is an invalid unrecognized argument in more recent versions.
+2. Update LWJGL dlls to the latest 2.9.3 version.
+3. Specify "--add-opens=java.*****=ALL-UNNAMED" type arguments for every single internal JDK API used.
+In Java 16+, due to JEP 261 (https://openjdk.org/jeps/261), strong encapsulation is enabled by default,
+and assumed internal JDK APIs are illegal to be utilized via reflection. You can manually break this still 
+via "--add-opens" or "--add-exports" commands.
